[gd_scene load_steps=2 format=3 uid="uid://dyd8bb7m14iye"]

[ext_resource type="Script" path="res://Store/Store.gd" id="1_inpwy"]

[node name="Store" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inpwy")

[node name="Bottle500" type="Label" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 89.0
offset_right = 158.0
offset_bottom = 116.0
text = "Bottle500"

[node name="Bottle1000" type="Label" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 138.0
offset_right = 158.0
offset_bottom = 165.0
text = "Bottle1000"

[node name="Bottle1500" type="Label" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 184.0
offset_right = 160.0
offset_bottom = 211.0
text = "Bottle1500"

[node name="Bottle2000" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 232.0
offset_right = 161.0
offset_bottom = 259.0
text = "Bottle2000"

[node name="BuyBottle500" type="Button" parent="."]
layout_mode = 0
offset_left = 161.0
offset_top = 80.0
offset_right = 273.0
offset_bottom = 123.0
text = "BuyBottle500"

[node name="BuyBottle1000" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 128.0
offset_right = 272.0
offset_bottom = 171.0
text = "BuyBottle1000"

[node name="BuyBottle1500" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 173.0
offset_right = 272.0
offset_bottom = 216.0
text = "BuyBottle1500"

[node name="BuyBottle2000" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 223.0
offset_right = 272.0
offset_bottom = 266.0
text = "BuyBottle2000"

[node name="Main" type="Button" parent="."]
layout_mode = 0
offset_left = 1047.0
offset_top = 23.0
offset_right = 1123.0
offset_bottom = 57.0
text = "Home"

[node name="Money" type="Label" parent="."]
layout_mode = 0
offset_left = 67.0
offset_top = 11.0
offset_right = 187.0
offset_bottom = 38.0
text = "Money"

[connection signal="pressed" from="BuyBottle500" to="." method="_on_buy_bottle_500_pressed"]
[connection signal="pressed" from="BuyBottle1000" to="." method="_on_buy_bottle_1000_pressed"]
[connection signal="pressed" from="BuyBottle1500" to="." method="_on_buy_bottle_1500_pressed"]
[connection signal="pressed" from="BuyBottle2000" to="." method="_on_buy_bottle_2000_pressed"]
[connection signal="pressed" from="Main" to="." method="_on_main_pressed"]
